--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -83,6 +83,10 @@
             <groupId>com.alipay.sofa.common</groupId>
             <artifactId>sofa-common-tools</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-common</artifactId>
+        </dependency>
         <!-- PanisBoot Starter End -->
     </dependencies>
 
